[package]
name = "client"
version = "0.1.0"
authors = ["Henrique Bubniak"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
publish = false


[dependencies]
eframe = "0.23"

egui_extras = { version="0.23", features = ["image"] }

env_logger = "0.10"
rsa = { version="0.9.5", features = ["serde"]}
rand = "0.8"
serde = "1.0"
serde_yaml = "0.9"